Fix some radio button alignment on mac

--- a/app/components/StatusControl.scss
+++ b/app/components/StatusControl.scss
@@ -7,11 +7,17 @@
     img {
       width: auto;
       margin-right: 10px;
-      margin-bottom: -1px; // align with the following radio & label
+      margin-bottom: -4px; // mac align with the following radio & label
+      // windows is handled below
     }
     label {
       display: inline-block;
       font-weight: normal;
     }
+  }
+}
+.win32 #statusRadioGroup {
+  img {
+    margin-bottom: -1px; // windows align with the following radio & label
   }
 }
